part/preferencesdialog.cpp
@@ -29,6 +29,7 @@ PreferencesDialog::PreferencesDialog(QWidget *parent, KConfigSkeleton *skeleton,
     m_general = new DlgGeneral(this, embedMode);
     m_performance = new DlgPerformance(this);
     m_accessibility = new DlgAccessibility(this);
+    m_accessibilityPage = nullptr;
     m_presentation = nullptr;
     m_annotations = nullptr;
     m_annotationsPage = nullptr;
@@ -39,7 +40,7 @@ PreferencesDialog::PreferencesDialog(QWidget *parent, KConfigSkeleton *skeleton,
 #endif
 
     addPage(m_general, i18n("General"), QStringLiteral("okular"), i18n("General Options"));
-    addPage(m_accessibility, i18n("Accessibility"), QStringLiteral("preferences-desktop-accessibility"), i18n("Accessibility Reading Aids"));
+    m_accessibilityPage = addPage(m_accessibility, i18n("Accessibility"), QStringLiteral("preferences-desktop-accessibility"), i18n("Accessibility Reading Aids"));
     addPage(m_performance, i18n("Performance"), QStringLiteral("preferences-system-performance"), i18n("Performance Tuning"));
     if (embedMode == Okular::ViewerWidgetMode) {
         setWindowTitle(i18n("Configure Viewer"));
@@ -55,6 +56,12 @@ PreferencesDialog::PreferencesDialog(QWidget *parent, KConfigSkeleton *skeleton,
     addPage(m_debug, "Debug", "system-run", "Debug options");
 #endif
     setHelp(QStringLiteral("configure"), QStringLiteral("okular"));
+}
+
+void PreferencesDialog::switchToAccessibilityPage()
+{
+    if (m_accessibilityPage)
+        setCurrentPage(m_accessibilityPage);
 }
 
 void PreferencesDialog::switchToAnnotationsPage()
